tests/fail/fail_duplicate_variable.kl
// ERROR: same variable declared twice in the same scope.
fn inisiu() {
    nter x = 1;
    nter x = 2;
    mostra(x);
}
